# 2025_kn31_oop

./: README.md  ai-review.md
1_lab/: README.md
2_lab/: README.md  main.py  note.ipynb
3_lab/: README.md  game.py  note.ipynb
4_lab/: README.md  __main__.py  books.py  library.py  library_uml.md  note.ipynb  stats.py  student.py
5_lab/: README.md  note.ipynb
6_lab/: Pipfile  README.md  anime.py  app.py
6_lab/2_pipenv/: .env  Pipfile
6_lab/3_poetry/: mkdocs.yml  pyproject.toml
6_lab/3_poetry/docs/: comparison.md  examples.md  index.md  pipenv.md  poetry.md  venv.md
7_lab/: README.md  post.md  pyproject.toml
7_lab/bobbi/: agent.py
7_lab/teacher/: agent.py
7_lab/telegram_bot/: __main__.py  agent.py
7_lab/telegram_manager/: agent.py
exam/: README.md  pyproject.toml
exam/delivery_agent/: agent.py  oop.py
exam/delivery_agent/.adk/: session.db
test/: note.ipynb
